HBASE-1262 Eclipse warnings, including performance related things like synthetic accessors
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hbase/trunk@755878 13f79535-47bb-0310-9956-ffa450edef68